--- a/salones.css
+++ b/salones.css
@@ -51,3 +51,17 @@
   }
   
   /* fin de la barra de navegación*/
+
+  /* galeria de salones */
+
+
+  .box-gal{
+    background-color: rgb(0, 47, 255);
+    width: 30%;
+    height: 75vh;
+    margin: 5px 10px 0px 30px;    
+    display: inline-block;
+    border-radius: 5px;
+    
+
+  }
