--- a/salones.css
+++ b/salones.css
@@ -59,9 +59,20 @@
     background-color: rgb(0, 47, 255);
     width: 30%;
     height: 75vh;
-    margin: 5px 10px 0px 30px;    
+    margin: 5px 10px 0px 20px;    
     display: inline-block;
     border-radius: 5px;
-    
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+
+
+  }
+
+  .box-son{
+    border: black solid 1px;
+    border-radius: 5px;
+    margin: 10px;
+    width: 95%;
+    height: 60%;
+    background-color: red;
 
   }
