--- a/salones.css
+++ b/salones.css
@@ -62,7 +62,8 @@
     margin: 5px 10px 0px 20px;    
     display: inline-block;
     border-radius: 5px;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; 
+
 
 
   }
@@ -74,5 +75,9 @@
     width: 95%;
     height: 60%;
     background-color: red;
-
+    overflow: hidden;
+  }
+  .box-son img {
+    width: 100%;
+    height: 100%;
   }
